global/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: better-wellness
  labels:
    name: better-wellness
