global/ingress-web-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: better-wellness
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Ensure class is specified (esp. for Minikube)
  rules:
    - host: better-wellness.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: better-wellness-web-app-service
                port:
                  number: 80
