global/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: better-wellness-ingress
  namespace: better-wellness
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: betterwellness.local        # Replace with your actual domain or testing domain
      http:
        paths:
          - path: /better-wellness/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: better-wellness-user-service
                port:
                  number: 80

          # Example: Add other microservices
          # - path: /auth-service/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: better-wellness-auth-service
          #       port:
          #         number: 80

          # - path: /messaging-service/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: better-wellness-messaging-service
          #       port:
          #         number: 80
